--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     </div>
   </div>
 
-  <audio data-key="65" src="../DrumMachine/clap.wav"></audio>
-  <audio data-key="83" src="../DrumMachine/hihat.wav"></audio>
-  <audio data-key="68" src="../DrumMachine/kick.wav"></audio>
-  <audio data-key="70" src="../DrumMachine/openhat.wav"></audio>
-  <audio data-key="71" src="../DrumMachine/boom.wav"></audio>
-  <audio data-key="72" src="../DrumMachine/ride.wav"></audio>
-  <audio data-key="74" src="../DrumMachine/snare.wav"></audio>
-  <audio data-key="75" src="../DrumMachine/tom.wav"></audio>
-  <audio data-key="76" src="../DrumMachine/tink.wav"></audio>
+  <audio data-key="65" src="./clap.wav"></audio>
+  <audio data-key="83" src="./hihat.wav"></audio>
+  <audio data-key="68" src="./kick.wav"></audio>
+  <audio data-key="70" src="./openhat.wav"></audio>
+  <audio data-key="71" src="./boom.wav"></audio>
+  <audio data-key="72" src="./ride.wav"></audio>
+  <audio data-key="74" src="./snare.wav"></audio>
+  <audio data-key="75" src="./tom.wav"></audio>
+  <audio data-key="76" src="./tink.wav"></audio>
 
 <script>
   function playSound (e){
